--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "devDependencies": {
     "axios": "^0.26.1",
     "framer-motion": "^6.2.8",
+    "movie-trailer": "^2.1.0",
     "next": "^12.1.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-player": "^2.10.0",
+    "react-youtube": "^8.2.1"
   }
 }
